scripts/nullaway/nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8.txt
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/ElevatorController.java:182: error: [NullAway] passing @Nullable parameter 'nextFloor' where @NonNull is required
                    if (floor.equals(nextFloor) || (elevator.hasPlaces() && floor.hasPassengers())) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/ElevatorController.java:188: error: [NullAway] passing @Nullable parameter 'nextFloor' where @NonNull is required
                        if (floor.compareTo(nextFloor) == 0) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/utils/TextAreaAppender.java:28: error: [NullAway] dereferenced expression textArea is @Nullable
        textArea.append(message);
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:53: error: [NullAway] initializer method does not guarantee @NonNull fields mainFrame (line 41), controlPanel (line 43), threadGroup (line 45), floorsMap (line 47), building (line 49), timer (line 51) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ActionViewController() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:126: error: [NullAway] dereferenced expression view is @Nullable
        view.setElevatorPassengers(elevator.getElevatorPassengers());
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:132: error: [NullAway] dereferenced expression floorsMap.get(floor) is @Nullable
            floorsMap.get(floor).update(floor.getDispatchPassengers(), floor.getArrivalPassengers());
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:135: error: [NullAway] dereferenced expression floorsMap.get(elevator.getCurrentFloor()) is @Nullable
        floorsMap.get(elevator.getCurrentFloor()).setElevatorPassengers(elevator.getElevatorPassengers());
                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/view/FloorView.java:135: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        elevator = new ElevatorView(null);
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/view/FloorView.java:146: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        elevator.updateContainer(null);
                                 ^
    (see http://t.uber.com/nullaway )
9 errors
